Final/ejercicio1/content-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-deployment
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: content
  template:
    metadata:
      labels:
        app: content
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: tier
                operator: In
                values:
                - front
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - content
            topologyKey: "kubernetes.io/hostname"  
      containers:
      - name: content
        image: jlaredo/formacion-static-server-amd64
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
