Final/ejercicio1/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      nodeSelector:
        tier: back
      containers:
        - name: db
          image: jlaredo/formacion-postgresql-amd64
          ports:
            - containerPort: 5432
              protocol: TCP
          resources:
            requests:
              cpu: "200m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
              readOnly: false
              subPath: pgdata
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
