Final/ejercicio1/service-content.yml
apiVersion: v1
kind: Service
metadata:
  name: service-content
  namespace: frontend
spec:
  selector:
    app: content
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
