Final/ejercicio1/service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: service-db
  namespace: backend
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
