Final/ejercicio1/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: service-web
  namespace: frontend
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
