Final/ejercicio1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: service-web
            port:
              number: 80
      - pathType: Prefix
        path: /static(/|$)(.*)
        backend:
          service:
            name: service-content
            port:
              number: 80
